# remiges-smtp

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile.smtpclientd  MODULE.bazel  README.md  VENDOR.bazel  WORKSPACE.bazel  deps.bzl  docker-compose.yml  go.mod  go.sum  remiges-smtp.code-workspace
.github/workflows/: go.yml
cmd/smtpclient/: BUILD.bazel  app_ctx.go  gen_dkim.go  generic.go  lookupmx.go  main.go  read_file.go  root.go  sendmail.go  server.go
cmd/smtpclient/cmd/: BUILD.bazel  root.go
config/: config.yaml
doc/: CONTRIBUTING.md  FAQ.md  QUICKSTART.md  TUTORIAL.md  USAGE.md
internal/cli/: BUILD.bazel  gen_dkim.go  gen_dkim_test.go  generic.go  generic_test.go  lookupmx.go  lookupmx_test.go  options.go  options_test.go  read_file.go  root.go  root_test.go  sendmail.go  server.go
internal/config/: BUILD.bazel  dkim.go  dkim_test.go  domain.go  file_mail.go  gen_dkim.go  lookupmx.go  mail.go  output.go  read_file.go  root.go  sendmail.go  server.go
internal/crypto/: BUILD.bazel  ed25519.go  ed25519_test.go  factory.go  factory_test.go  interface.go  key_writer.go  key_writer_test.go  mock.go  rsa.go  rsa_test.go
internal/dkim/: BUILD.bazel  sign.go  txt_gen.go  txt_gen_test.go
internal/dns/: BUILD.bazel  interface.go  mock.go  mox_mock.go  resolver.go  resolver_test.go
internal/errors/: BUILD.bazel  errors.go
internal/file/: BUILD.bazel  file_read_tracker.go  file_read_tracker_test.bak  file_read_tracker_test.go  interface.go  mail_transform.go  mail_transform_test.go  mock.go  reader.go  reader_test.go  service.go  service_test.go
internal/file_mail/: BUILD.bazel  body.go  body_test.go  factory.go  factory_test.go  header_contenttype.go  header_contenttype_test.go  header_from.go  header_from_test.go  header_msgid.go  header_msgid_test.go  header_subj.go  header_subj_test.go  header_to.go  header_to_test.go  headers.go  headers_test.go  interface.go  mail_transform.go  mail_transform_test.go  mock.go  service.go  service_test.go
internal/http/: BUILD.bazel  routes.go
internal/intmail/: BUILD.bazel  body.go  body_headers.go  body_headers_test.go  body_test.go  dkim.go  dkim_test.go  factory.go  factory_test.go  interface.go  merge_body.go  merge_body_test.go  merge_headers.go  merge_headers_test.go  mock.go  unixdos.go  unixdos_test.go
internal/mail/: BUILD.bazel  body.go  body_headers.go  body_headers_test.go  body_test.go  dkim.go  dkim_test.go  factory.go  factory_test.go  interface.go  merge_body.go  merge_body_test.go  mock.go  unixdos.go  unixdos_test.go
internal/output/: BUILD.bazel  factory.go  factory_test.go  file.go  file_test.go  file_tracker.go  file_tracker_test.go  interface.go  mock.go
internal/sendmail/: BUILD.bazel  dialer.go  dialer_mock.go  dialer_test.go  dns_mock.go  interface.go  mock.go  mox_mock.go  sendmail.go  sendmail_mock.go  sendmail_test.go  service.go  service_test.go  smtpclient_mock.go
internal/telemetry/: BUILD.bazel  zerolog.go  zerolog_test.go
internal/utils/: BUILD.bazel  io_validator.go  io_validator_test.go  rand.go  rand_test.go
pkg/dn/: BUILD.bazel  structs.go
pkg/input/: BUILD.bazel  file.go  file_read_tracker.go  file_read_tracker_test.go  interface.go  mail_transform.go  mail_transform_test.go  mock.go  reader.go  reader_test.go  service.go  service_test.go
pkg/mail/: BUILD.bazel  structs.go
pkg/pmail/: BUILD.bazel  structs.go
