bazel_dep(
    name = "rules_go",
    version = "0.53.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.42.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.config(
    go_env = {
        "GOPRIVATE": "github.com/stlimtat/remiges-smtp/*",
    },
)
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gin_contrib_pprof",
    "com_github_gin_gonic_gin",
    "com_github_go_mods_zerolog_gin",
    "com_github_go_playground_validator_v10",
    "com_github_go_redis_redismock_v9",
    "com_github_go_viper_mapstructure_v2",
    "com_github_google_uuid",
    "com_github_mcnijman_go_emailaddress",
    "com_github_mjl__adns",
    "com_github_mjl__mox",
    "com_github_prometheus_client_golang",
    "com_github_redis_go_redis_v9",
    "com_github_rs_zerolog",
    "com_github_samber_slog_zerolog_v2",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "org_golang_x_sync",
    "org_uber_go_mock",
)

# go_tool_deps = use_extension("@gazelle//:extensions.bzl", "go_deps", isolate = True)
# go_tool_deps.from_file(go_mod = "//pkg/tools:go.mod")
