load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "smtpclient_lib",
    srcs = [
        "lookupmx.go",
        "main.go",
        "read_file.go",
        "root.go",
        "sendmail.go",
        "server.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/cmd/smtpclient",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/file",
        "//internal/http",
        "//internal/mail",
        "//internal/sendmail",
        "//internal/telemetry",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_mods_zerolog_gin//:zerolog-gin",
        "@com_github_mjl_mox//dns",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "smtpclient",
    embed = [":smtpclient_lib"],
    visibility = ["//visibility:public"],
)
