load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["options.go"],
    importpath = "github.com/stlimtat/remiges-smtp/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)
