load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "lookupmx.go",
        "root.go",
        "sendmail.go",
        "server.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_mjl_mox//smtp",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_viper//:viper",
    ],
)
