load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "dkim.go",
        "domain.go",
        "file_mail.go",
        "lookupmx.go",
        "mail.go",
        "read_file.go",
        "root.go",
        "sendmail.go",
        "server.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/telemetry",
        "@com_github_mjl_mox//config",
        "@com_github_mjl_mox//dns",
        "@com_github_mjl_mox//smtp",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "config_test",
    srcs = ["dkim_test.go"],
    embed = [":config"],
    deps = [
        "//internal/telemetry",
        "@com_github_mjl_mox//config",
        "@com_github_mjl_mox//dns",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
