load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crypto",
    srcs = [
        "ed25519.go",
        "factory.go",
        "interface.go",
        "key_writer.go",
        "mock.go",
        "rsa.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/crypto",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/utils",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "crypto_test",
    srcs = [
        "ed25519_test.go",
        "factory_test.go",
        "key_writer_test.go",
        "rsa_test.go",
    ],
    embed = [":crypto"],
    deps = [
        "//internal/telemetry",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)

alias(
    name = "go_default_library",
    actual = ":crypto",
    visibility = ["//:__subpackages__"],
)
