load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dkim",
    srcs = ["txt_gen.go"],
    importpath = "github.com/stlimtat/remiges-smtp/internal/dkim",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)

go_test(
    name = "dkim_test",
    srcs = ["txt_gen_test.go"],
    embed = [":dkim"],
    deps = [
        "//internal/telemetry",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":dkim",
    visibility = ["//:__subpackages__"],
)
