load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "errors",
    srcs = ["errors.go"],
    importpath = "github.com/stlimtat/remiges-smtp/internal/errors",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":errors",
    visibility = ["//:__subpackages__"],
)
