load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file",
    srcs = [
        "file_read_tracker.go",
        "interface.go",
        "mock.go",
        "reader.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/file",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/input",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "file_test",
    srcs = ["reader_test.go"],
    embed = [":file"],
    deps = [
        "//internal/telemetry",
        "//pkg/input",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)

alias(
    name = "go_default_library",
    actual = ":file",
    visibility = ["//:__subpackages__"],
)
