load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "file_mail",
    srcs = [
        "body.go",
        "factory.go",
        "header_contenttype.go",
        "header_from.go",
        "header_subj.go",
        "header_to.go",
        "headers.go",
        "interface.go",
        "mock.go",
        "service.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/file_mail",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/file",
        "//internal/mail",
        "//pkg/input",
        "@com_github_mcnijman_go_emailaddress//:go-emailaddress",
        "@com_github_mjl_mox//smtp",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "file_mail_test",
    srcs = [
        "body_test.go",
        "factory_test.go",
        "header_from_test.go",
        "header_subj_test.go",
        "header_to_test.go",
        "headers_test.go",
        "service_test.go",
    ],
    embed = [":file_mail"],
    deps = [
        "//internal/config",
        "//internal/file",
        "//internal/mail",
        "//internal/telemetry",
        "@com_github_mjl_mox//dns",
        "@com_github_mjl_mox//smtp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
