load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mail",
    srcs = [
        "body.go",
        "body_headers.go",
        "dkim.go",
        "factory.go",
        "interface.go",
        "merge_body.go",
        "mock.go",
        "unixdos.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/mail",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//pkg/input",
        "//pkg/pmail",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_mjl_mox//config",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "mail_test",
    srcs = [
        "body_headers_test.go",
        "body_test.go",
        "dkim_test.go",
        "factory_test.go",
        "merge_body_test.go",
        "unixdos_test.go",
    ],
    embed = [":mail"],
    deps = [
        "//internal/config",
        "//internal/telemetry",
        "//pkg/input",
        "//pkg/pmail",
        "@com_github_mjl_mox//config",
        "@com_github_mjl_mox//dns",
        "@com_github_mjl_mox//smtp",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_library(
    name = "intmail",
    srcs = [
        "body.go",
        "body_headers.go",
        "dkim.go",
        "factory.go",
        "interface.go",
        "merge_body.go",
        "mock.go",
        "unixdos.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/intmail",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//pkg/input",
        "//pkg/pmail",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_mjl_mox//config",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "intmail_test",
    srcs = [
        "body_headers_test.go",
        "body_test.go",
        "dkim_test.go",
        "factory_test.go",
        "merge_body_test.go",
        "unixdos_test.go",
    ],
    embed = [":intmail"],
    deps = [
        "//internal/config",
        "//internal/telemetry",
        "//pkg/input",
        "//pkg/pmail",
        "@com_github_mjl_mox//config",
        "@com_github_mjl_mox//dns",
        "@com_github_mjl_mox//smtp",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
