load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "intmail",
    srcs = [
        "body.go",
        "body_headers.go",
        "dkim.go",
        "factory.go",
        "interface.go",
        "merge_body.go",
        "merge_headers.go",
        "mock.go",
        "unixdos.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/intmail",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/crypto",
        "//internal/utils",
        "//pkg/input",
        "//pkg/pmail",
        "@com_github_go_viper_mapstructure_v2//:mapstructure",
        "@com_github_mjl__mox//dkim",
        "@com_github_mjl__mox//mox-",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "intmail_test",
    srcs = [
        "body_headers_test.go",
        "body_test.go",
        "dkim_test.go",
        "factory_test.go",
        "merge_body_test.go",
        "merge_headers_test.go",
        "unixdos_test.go",
    ],
    embed = [":intmail"],
    deps = [
        "//internal/config",
        "//internal/crypto",
        "//internal/telemetry",
        "//pkg/input",
        "//pkg/pmail",
        "@com_github_mjl__mox//dkim",
        "@com_github_mjl__mox//dns",
        "@com_github_mjl__mox//smtp",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
