load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sendmail",
    srcs = [
        "dialer.go",
        "dns_mock.go",
        "interface.go",
        "mock.go",
        "sendmail.go",
        "service.go",
        "smtpclient_mock.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/internal/sendmail",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/file",
        "//internal/file_mail",
        "//internal/mail",
        "//internal/utils",
        "//pkg/input",
        "@com_github_mjl_adns//:adns",
        "@com_github_mjl_mox//dns",
        "@com_github_mjl_mox//smtpclient",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "sendmail_test",
    srcs = [
        "sendmail_test.go",
        "service_test.go",
    ],
    embed = [":sendmail"],
    deps = [
        "//internal/file",
        "//internal/mail",
        "//internal/telemetry",
        "@com_github_mjl_adns//:adns",
        "@com_github_mjl_mox//dns",
        "@com_github_mjl_mox//smtp",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_mock//gomock",
    ],
)
