load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "telemetry",
    srcs = ["zerolog.go"],
    importpath = "github.com/stlimtat/remiges-smtp/internal/telemetry",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//diode",
        "@com_github_rs_zerolog//log",
        "@com_github_samber_slog_zerolog_v2//:slog-zerolog",
    ],
)

alias(
    name = "go_default_library",
    actual = ":telemetry",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "telemetry_test",
    srcs = ["zerolog_test.go"],
    embed = [":telemetry"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
