load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = ["rand.go"],
    importpath = "github.com/stlimtat/remiges-smtp/internal/utils",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "utils_test",
    srcs = ["rand_test.go"],
    embed = [":utils"],
    deps = ["@com_github_stretchr_testify//assert"],
)
