load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dn",
    srcs = ["structs.go"],
    importpath = "github.com/stlimtat/remiges-smtp/pkg/dn",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mjl_adns//:adns",
        "@com_github_mjl_mox//dns",
    ],
)
