load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "input",
    srcs = [
        "reader.go",
        "service.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/pkg/input",
    visibility = ["//visibility:public"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)

go_test(
    name = "input_test",
    srcs = ["reader_test.go"],
    embed = [":input"],
    deps = [
        "//internal/telemetry",
        "@com_github_stretchr_testify//assert",
    ],
)
