load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "input",
    srcs = [
        "file_read_tracker.go",
        "interface.go",
        "mail_transform.go",
        "mock.go",
        "reader.go",
        "service.go",
    ],
    importpath = "github.com/stlimtat/remiges-smtp/pkg/input",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//internal/mail",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "input_test",
    srcs = [
        "file_read_tracker_test.go",
        "mail_transform_test.go",
        "reader_test.go",
        "service_test.go",
    ],
    embed = [":input"],
    deps = [
        "//internal/config",
        "//internal/mail",
        "//internal/telemetry",
        "@com_github_go_redis_redismock_v9//:redismock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
