load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pmail",
    srcs = ["structs.go"],
    importpath = "github.com/stlimtat/remiges-smtp/pkg/pmail",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/errors",
        "@com_github_mjl__mox//smtp",
        "@com_github_mjl__mox//smtpclient",
    ],
)

alias(
    name = "go_default_library",
    actual = ":pmail",
    visibility = ["//visibility:public"],
)
